--- a/index.html
+++ b/index.html
@@ -1,331 +1,107 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Light-Car Iluminação Automotiva</title>
-    <link rel="stylesheet" href="./lib/bootstrap.min.css">
+    <title>AnimaBixo - A loja dos bichos</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Agbalumo&family=Pacifico&family=Roboto:ital,wght@1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="main.css">
 </head>
-<style>
-
-    header {
-        position: sticky;
-        top: 0;
-        left: 0;
-        z-index: 10000;
-    }
-
-    .nav-link {
-        text-align: center;
-    }
-
-    .navbar-nav .nav-link.active {
-        color: #fff;
-    }
-
-    .nav-link:hover {
-        background-color: #0D6EFD;
-        color: white;
-    }
-
-    .imagem-logo img {
-        width: 80px;
-        height: auto;
-    }
-
-    .botao-desconto {
-        background-color: transparent;
-    }
-
-    .carousel-fotos {
-        max-width: 1024px;
-        max-height: 500px;
-        margin: 0 auto;
-        display: block;
-    }
-
-    .card {
-        max-width: 90%; 
-        margin: 0 auto;
-        border-radius: 8px;
-    }
-
-    .card-style {
-        margin: 0 auto;
-    }
-
-
-</style>
-<body style="background-color: #EDEDE8;">
-<header id="cabecalho">
-    <div class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
-        <div class="container imagem-logo" style="color: #fff">
-            <img src="./img/lampada.png">
-            <h1>Lumiauto Shop</h1>
-            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu">
+<body>
+    <header class="navbar navbar-expand-lg sticky-lg-top p-4" id="cabecalho">
+        <div class="container">
+            <h1 class="navbar-brand m-0 section-title">
+                AnimaBixo
+            </h1>
+            <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu-navegacao">
                 <span class="navbar-toggler-icon"></span>
             </button>
-        <nav class="collapse navbar-collapse justify-content-end" id="menu">
-            <ul class="nav navbar-nav nav-pills">
-                <li class="nav-item">
-                    <a class="nav-link active" href="#inicio">Início</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#novidades">Novidade</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#produtos">Produtos</a>
-                </li>       
-                <li class="nav-item">    
-                    <a class="nav-link" href="#sobre">Sobre a loja</a>
-                </li>
-            </ul>
-        </nav>
-        <button id="bnt-login" class="btn btn-danger" type="button">LOGIN</button>
+            <nav class="navbar-collapse collapse justify-content-end" id="menu-navegacao">
+                <ul class="nav nav-pills d-block d-md-flex">
+                    <li class="nav-item fw-bold">
+                        <a href="#sobre-o-pet" class="nav-link">
+                            <i class="bi bi-house-door me-1"></i>
+                            Cachorro
+                        </a>
+                    </li>
+                    <li class="nav-item fw-bold">
+                        <a href="#sobre-o-pet" class="nav-link">
+                            <i class="bi bi-house-door me-1"></i>
+                            Gatos
+                        </a>
+                    </li>
+                    <li class="nav-item fw-bold">
+                        <a href="#sobre-o-pet" class="nav-link">
+                            <i class="bi bi-house-door me-1"></i>
+                            Aves
+                        </a>
+                    </li>
+                    <li class="nav-item fw-bold">
+                        <a href="#sobre-o-pet" class="nav-link">
+                            <i class="bi bi-house-door me-1"></i>
+                            Peixes
+                        </a>
+                    </li>
+                    <li class="nav-item fw-bold">
+                        <a href="#sobre-o-pet" class="nav-link">
+                            <i class="bi bi-house-door me-1"></i>
+                            Roedores
+                        </a>
+                    </li>
+                    <li class="nav-item fw-bold">
+                        <a href="#sobre-o-pet" class="nav-link">
+                            <i class="bi bi-house-door me-1"></i>
+                            Pedidos
+                        </a>
+                    </li>
+                    <li class="nav-item fw-bold">
+                        <a href="#sobre-o-pet" class="nav-link">
+                            <i class="bi bi-house-door me-1"></i>
+                            Login
+                        </a>
+                    </li>
+                </ul>
+            </nav>
         </div>
-    </div>
-</header>
-
-
-<div data-bs-scroll data-bs-target="#cabecalho">
-    <section id="inicio">
-        <div class="container" style="margin-top: 3vh; margin-bottom: 4vh;">
-            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-                <div class="carousel-inner carousel-fotos">
-                    <div data-bs-interval="3000" class="carousel-item active">
-                    <img src="./img/farol4.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div data-bs-interval="3000" class="carousel-item">
-                    <img src="./img/farol1.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div data-bs-interval="3000" class="carousel-item">
-                    <img src="./img/farol3.jpg" class="d-block w-100" alt="...">
+    </header>
+    
+    <div data-bs-spy="scroll" data-bs-target="cabecalho">
+        <section id="sobre-a-loja">
+            <div class="carousel slide" data-bs-ride="carousel" id="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="10000">
+                        <img src="./imgs/slide1.jpg" alt="">
                     </div>
                 </div>
-                <button class="carousel-control-prev " type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon " aria-hidden="true"></span>
-                    <span class="visually-hidden ">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="10000">
+                        <img src="./imgs/slide2.jpg" alt="">
+                    </div>
+                </div>
+                <div class="carousel-item active" data-bs-interval="10000">
+                    <img src="./imgs/slide2.jpg" alt="">
+                </div>
             </div>
-        </div>
-    </section>
-
-<div class="container">
-    <section id="novidades">
-        <div class="row">
-            <div class="col-12" style="margin-bottom: 1vh;">
-                <article class="card custon-card text-bg-danger">
-                    <div class="card-header border border-0">
-                        <h2>
-                            PROMOÇÃO LUZES DE NATAL
-                        </h2>
-                    </div>
-                </article>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carousel" class="active" data-bs-slide-to="0"></button>
+                <button type="button" data-bs-target="#carousel" data-bs-slide-to="1"></button>
+                <button type="button" data-bs-target="#carousel" data-bs-slide-to="2"></button>
             </div>
-        </div>
-    </section>    
-    <div class="row">
-        <div class="col-lg-4 col-md-6 card-style" style="margin-bottom: 2vh;">
-            <article class="card custon-card border border-dark">
-                <div class="card-header text-bg-dark rounded-botton">
-                    <h4 class="text-center">Lâmpadas de Led H1</h4>
-                </div>
-                <div class="card-body d-flex align-items-center btn btn-light">
-                    <div class="col-md-4">
-                        <img src="./img/lamp1.jpg" class="img-fluid">
-                    </div>
-                    <div class="align-items-center text-img">
-                        <p><h4>Marca: OSRAM</h4></p>
-                        <p><h4 class="fs-6">Modelo: OSRAM</h4></p>
-                        <p><h4 class="text-danger fs-2">R$: 299,99</h4></p>
-                        <button type="submit" class="btn btn-outline-success">Compre</button>
-                    </div>                                   
-                </div>
-            </article>
-        </div>
-        <div class="col-lg-4 col-md-6 card-style" style="margin-bottom: 2vh;">
-            <article class="card custon-card border border-dark">
-                <div class="card-header text-bg-dark rounded-botton">
-                    <h4 class="text-center">Lâmpadas de Led H1</h4>
-                </div>
-                <div class="card-body d-flex align-items-center btn btn-light">
-                    <div class="col-md-4">
-                        <img src="./img/lamp1.jpg" class="img-fluid">
-                    </div>
-                    <div class="align-items-center text-img">
-                        <p><h4>Marca: OSRAM</h4></p>
-                        <p><h4 class="fs-6">Modelo: OSRAM</h4></p>
-                        <p><h4 class="text-danger fs-2">R$: 299,99</h4></p>
-                        <button type="submit" class="btn btn-outline-success">Compre</button>
-                    </div>                                   
-                </div>
-            </article>
-        </div>
-        <div class="col-lg-4 col-md-6 card-style" style="margin-bottom: 2vh;">
-            <article class="card custon-card border border-dark">
-                <div class="card-header text-bg-dark rounded-botton">
-                    <h4 class="text-center">Lâmpadas de Led H1</h4>
-                </div>
-                <div class="card-body d-flex align-items-center btn btn-light">
-                    <div class="col-md-4">
-                        <img src="./img/lamp1.jpg" class="img-fluid">
-                    </div>
-                    <div class="align-items-center text-img">
-                        <p><h4>Marca: OSRAM</h4></p>
-                        <p><h4 class="fs-6">Modelo: OSRAM</h4></p>
-                        <p><h4 class="text-danger fs-2">R$: 299,99</h4></p>
-                        <button type="submit" class="btn btn-outline-success">Compre</button>
-                    </div>                                   
-                </div>
-            </article>
-        </div>          
+        </section>
     </div>
 
-    <section id="produtos">
-        <div class="row">
-            <div class="col-12" style="margin-bottom: 1vh; margin-top: 4vh;">
-                <article class="card custon-card text-bg-danger">
-                    <div class="card-header border border-0">
-                        <h2>
-                            MAIS VENDIDOS
-                        </h2>
-                    </div>
-                </article>
-            </div>
-        </div>
-    </section>    
-    <div class="row">
-        <div class="col-lg-4 col-md-6 card-style" style="margin-bottom: 2vh;">
-            <article class="card custon-card border border-dark">
-                <div class="card-header text-bg-dark rounded-botton">
-                    <h4 class="text-center">Lâmpadas de Led H4</h4>
-                </div>
-                <div class="card-body d-flex align-items-center btn btn-light">
-                    <div class="col-md-4">
-                        <img src="./img/lamp1.jpg" class="img-fluid">
-                    </div>
-                    <div class="align-items-center text-img">
-                        <p><h4>Marca: OSRAM</h4></p>
-                        <p><h4 class="fs-6">Modelo: OSRAM</h4></p>
-                        <p><h4 class="text-danger fs-2">R$: 299,99</h4></p>
-                        <button type="submit" class="btn btn-outline-success">Compre</button>
-                    </div>                                   
-                </div>
-            </article>
-        </div>
-        <div class="col-lg-4 col-md-6 card-style" style="margin-bottom: 2vh;">
-            <article class="card custon-card border border-dark">
-                <div class="card-header text-bg-dark rounded-botton">
-                    <h4 class="text-center">Lâmpadas de Led H4</h4>
-                </div>
-                <div class="card-body d-flex align-items-center btn btn-light">
-                    <div class="col-md-4">
-                        <img src="./img/lamp1.jpg" class="img-fluid">
-                    </div>
-                    <div class="align-items-center text-img">
-                        <p><h4>Marca: OSRAM</h4></p>
-                        <p><h4 class="fs-6">Modelo: OSRAM</h4></p>
-                        <p><h4 class="text-danger fs-2">R$: 299,99</h4></p>
-                        <button type="submit" class="btn btn-outline-success">Compre</button>
-                    </div>                                   
-                </div>
-            </article>
-        </div>
-        <div class="col-lg-4 col-md-6 card-style" style="margin-bottom: 2vh;">
-            <article class="card custon-card border border-dark">
-                <div class="card-header text-bg-dark rounded-botton">
-                    <h4 class="text-center">Lâmpadas de Led H4</h4>
-                </div>
-                <div class="card-body d-flex align-items-center btn btn-light">
-                    <div class="col-md-4">
-                        <img src="./img/lamp1.jpg" class="img-fluid">
-                    </div>
-                    <div class="align-items-center text-img">
-                        <p><h4>Marca: OSRAM</h4></p>
-                        <p><h4 class="fs-6">Modelo: OSRAM</h4></p>
-                        <p><h4 class="text-danger fs-2">R$: 299,99</h4></p>
-                        <button type="submit" class="btn btn-outline-success">Compre</button>
-                    </div>                                   
-                </div>
-            </article>
-        </div>
-        <div class="col-lg-4 col-md-6 card-style" style="margin-bottom: 2vh;">
-            <article class="card custon-card border border-dark">
-                <div class="card-header text-bg-dark rounded-botton">
-                    <h4 class="text-center">Lâmpadas de Led H4</h4>
-                </div>
-                <div class="card-body d-flex align-items-center btn btn-light">
-                    <div class="col-md-4">
-                        <img src="./img/lamp1.jpg" class="img-fluid">
-                    </div>
-                    <div class="align-items-center text-img">
-                        <p><h4>Marca: OSRAM</h4></p>
-                        <p><h4 class="fs-6">Modelo: OSRAM</h4></p>
-                        <p><h4 class="text-danger fs-2">R$: 299,99</h4></p>
-                        <button type="submit" class="btn btn-outline-success">Compre</button>
-                    </div>                                   
-                </div>
-            </article>
-        </div>        
-        <div class="col-lg-4 col-md-6 card-style" style="margin-bottom: 2vh;">
-            <article class="card custon-card border border-dark">
-                <div class="card-header text-bg-dark rounded-botton">
-                    <h4 class="text-center">Lâmpadas de Led H4</h4>
-                </div>
-                <div class="card-body d-flex align-items-center btn btn-light">
-                    <div class="col-md-4">
-                        <img src="./img/lamp1.jpg" class="img-fluid">
-                    </div>
-                    <div class="align-items-center text-img">
-                        <p><h4>Marca: OSRAM</h4></p>
-                        <p><h4 class="fs-6">Modelo: OSRAM</h4></p>
-                        <p><h4 class="text-danger fs-2">R$: 299,99</h4></p>
-                        <button type="submit" class="btn btn-outline-success">Compre</button>
-                    </div>                                   
-                </div>
-            </article>
-        </div>        
-        <div class="col-lg-4 col-md-6 card-style" style="margin-bottom: 2vh;">
-            <article class="card custon-card border border-dark">
-                <div class="card-header text-bg-dark rounded-botton">
-                    <h4 class="text-center">Lâmpadas de Led H4</h4>
-                </div>
-                <div class="card-body d-flex align-items-center btn btn-light">
-                    <div class="col-md-4">
-                        <img src="./img/lamp1.jpg" class="img-fluid">
-                    </div>
-                    <div class="align-items-center text-img">
-                        <p><h4>Marca: OSRAM</h4></p>
-                        <p><h4 class="fs-6">Modelo: OSRAM</h4></p>
-                        <p><h4 class="text-danger fs-2">R$: 299,99</h4></p>
-                        <button type="submit" class="btn btn-outline-success">Compre</button>
-                    </div>                                   
-                </div>
-            </article>
-        </div>                
-    </div>
-</div>
-</div>          
-
-<section id="sobre">
-    <footer class="text-bg-dark navbar navbar-expand-lg rounded-bottom">
-        <p style="margin-left: 10vh; margin-top:6vh;"><h2>Siga nossas redes sociais</p></h2>
-            <div class="ms-auto" style="margin-top: -2vh;">
-                <a href="#"></a>
-                    <img src="./img/facebook.png" class="social-icon img-fluid" alt="Facebook">
-
-                <a href="#"></a>
-                    <img src="./img/instagram.png" class="social-icon img-fluid" alt="Instagram">
-
-                <a href="#"></a>
-                    <img src="./img/youtube.png" class="social-icon img-fluid" alt="Youtube" style="margin-right: 10vh;">          
-            </div>
-    </footer>
-</section>      
-<script src="./lib/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
