--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="navbar navbar-expand-lg sticky-lg-top p-4" id="cabecalho">
         <div class="container">
             <h1 class="navbar-brand m-0 section-title">
-                AnimaBixo
+                ComputerTech
             </h1>
             <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu-navegacao">
                 <span class="navbar-toggler-icon"></span>
@@ -68,37 +68,27 @@
             </nav>
         </div>
     </header>
-    
+    <section id="corpo">
     <div data-bs-spy="scroll" data-bs-target="cabecalho">
         <section id="sobre-a-loja">
             <div class="carousel slide" data-bs-ride="carousel" id="carousel">
                 <div class="carousel-inner">
-                    <div class="carousel-item active" data-bs-interval="10000">
-                        <img src="./imgs/slide1.jpg" alt="">
+                    <div class="carousel-item text-center active" data-bs-interval="10000">
+                        <img src="./imgs/slide1.jpg" class="mx-auto d-block" alt="">
+                    </div>
+                    <div class="carousel-item"text-center  data-bs-interval="10000">
+                        <img src="./imgs/slide2.jpg" class="mx-auto d-block" alt="">
+                    </div>
+                    <div class="carousel-item"text-center  data-bs-interval="10000">
+                        <img src="./imgs/slide3.jpg" class="mx-auto d-block" alt="">
                     </div>
                 </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active" data-bs-interval="10000">
-                        <img src="./imgs/slide2.jpg" alt="">
-                    </div>
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carousel" class="active" data-bs-slide-to="0"></button>
+                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="1"></button>
+                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="2"></button>
                 </div>
-                <div class="carousel-item active" data-bs-interval="10000">
-                    <img src="./imgs/slide2.jpg" alt="">
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
-                <span class="carousel-control-next-icon"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carousel" class="active" data-bs-slide-to="0"></button>
-                <button type="button" data-bs-target="#carousel" data-bs-slide-to="1"></button>
-                <button type="button" data-bs-target="#carousel" data-bs-slide-to="2"></button>
-            </div>
+            </div>  
         </section>
     </div>
 
