--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
             </nav>
         </div>
     </header>
-    <section id="corpo">
-    <div data-bs-spy="scroll" data-bs-target="cabecalho">
+    <div data-bs-spy="scroll" data-bs-target="cabecalho" class="pt-3">
         <section id="sobre-a-loja">
             <div class="carousel slide" data-bs-ride="carousel" id="carousel">
                 <div class="carousel-inner">
@@ -83,14 +82,88 @@
                         <img src="./imgs/slide3.jpg" class="mx-auto d-block" alt="">
                     </div>
                 </div>
+                <div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide-to="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                </div>
+                <div>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide-to="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carousel" class="active" data-bs-slide-to="0"></button>
                     <button type="button" data-bs-target="#carousel" data-bs-slide-to="1"></button>
                     <button type="button" data-bs-target="#carousel" data-bs-slide-to="2"></button>
                 </div>
-            </div>  
+            </div>
+            <div class="pt-5 pb-5">
+                <div class="container">
+                    <div class="col-md-6">
+                        <img src="./imgs/loja.jpg" class="d-block w-100 rounded" alt="Foto Fachada">
+                    </div>
+                    <div class="col-md-7">
+                        <h2 class="section-title">Sobre o a loja</h2>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta, laboriosam ipsum libero dolorem maiores pariatur rerum deleniti sapiente minima nesciunt corporis cum, autem possimus distinctio magnam quod delectus commodi magni.</p>
+                    </div>
+                    <h3>
+                        <div class="section-tile">Nossos serviços</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, beatae distinctio! Et minus quam reprehenderit maiores</p>
+                        <ul>
+                            <li>
+                                Item 1
+                            </li>
+                            <li>
+                                Item 2
+                            </li>
+                            <li>
+                                Item 3
+                            </li>
+                        </ul>
+                    </h3>          
+                </div>
+            </div>
         </section>
-    </div>
+        <section id="especialidades">
+            <div class="container">
+                <div class="row">
+                    <h2 class="section-title texte-center mb-5">
+                        Nossas especialidades
+                    </h2>
+                </div>
+                <div class="row">
+                    <div class="col-md-4 m">
+                        <img src="" alt="" class="d-block w-100 rounded mb-2">
+                        <h3 class="fs-4">
+                            Computadores
+                        </h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae mollitia repellendus at excepturi repudiandae</p>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="m">
+                            <img src="" alt="" class="d-block w-100 rounded mb-2">
+                            <h3 class="fs-4">
+                                Notebok
+                            </h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae mollitia repellendus at excepturi repudiandae</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="m">
+                            <img src="" alt="" class="d-block w-100 rounded mb-2">
+                            <h3 class="fs-4">
+                                Produtos Apple
+                            </h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae mollitia repellendus at excepturi repudiandae</p>
+                        </div>
+                    </div>    
+                </div>
+            </div>
+        </section>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
